# silverton-dataops-brutesquad-exapmle

./: README.md  action.yaml  action1.yaml  providers.tf  variables.tf
.github/workflows/: action1.yaml
action1/: action.yml  action_ops.yml  goodbye.sh  test1.py
action1/scripts/: ops_test.sh
action1/scripts/airflow_dag_runner/: pyproject.toml
action1/scripts/airflow_dag_runner/dag_runner/: __init__.py  airflow_operator.py
action1/scripts/airflow_dag_runner/tests/: test_airflow_operator.py
action1/scripts/toml_utilities/: pyproject.toml
config/: backend.tfvars  variables.tfvars
module/aws/: terragrunt.hcl
module/aws/pipeline_infra/: _data.tf  _locals.tf  _output.tf  _tagging.tf  _variables.tf  _versions.tf  main.tf  secrets.tf  terragrunt.hcl
module/aws/pipeline_infra/configs/: configuration.yaml
module/aws/pipeline_infra/modules/tdv/: _variables.tf  outputs.tf  s3.tf
