[tool.poetry]
name = "airflow-dag-runner"
version = "0.1.0"
description = ""
authors = ["Antoine Kurukchi <antoine.kurukchi@evernorth.com>"]
packages = [{include = "dag_runner"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
boto3 = "^1.34.27"
pandas = ">=2.0.3,<2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
moto = "^4.2.13"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trigger_dag = "dag_runner:trigger_dag"
trigger_dag_and_monitor = "dag_runner:trigger_dag_and_monitor"
unpause_dag = "dag_runner:unpause_dag"